Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8027622

java.time.Instant.create failing since hs25-b56

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2 P2
    • hs25
    • hs25, 8
    • hotspot
    • b56
    • b58
    • x86_64
    • Not verified


        jdk8/tl picked up hs25-b56 yesterday and we seem to have picked up a regression.

        Approximately 15 tests that use java.time.Instant started to fail with:
           java.time.DateTimeException: Instant exceeds minimum or maximum instant

        Sample tests in the jdk repository are:
          test/java/util/Calendar/JavatimeTest.java
          test/java/nio/file/attribute/FileTime/Basic.java

        and many of the JSR-310 regression and JCK tests.

        The tests pass if run with -Xint although it seems to cause warnings to be emitted:

          Java HotSpot(TM) 64-Bit Server VM warning: Shutting down compiler C2 (no space to run compilers)
          Java HotSpot(TM) 64-Bit Server VM warning: Shutting down compiler C1 (no space to run compilers)

        The method causing the problem appears to Instant.create so running with -XX:CompileCommandFile pointing to a .hotspot_compiler file with:
          exclude java/time/Instant create

        can be used to workaround the issue for now.

              rbackman Rickard Backman (Inactive)
              alanb Alan Bateman
              Votes:
              0 Vote for this issue
              Watchers:
              13 Start watching this issue

                Created:
                Updated:
                Resolved: