8027622: java.time.Instant.create failing since hs25-b56

Reviewed-by: kvn, iveresov